Fix right column overflow issue

--- a/src/Components/Projects/ProjectListing/ProjectListingItem/project-listing-item.scss
+++ b/src/Components/Projects/ProjectListing/ProjectListingItem/project-listing-item.scss
@@ -13,7 +13,6 @@
     .left-column, .right-column {
         display: flex;
         flex-direction: column;
-        gap: 5%;
     }
 
     .title-section {
@@ -106,6 +105,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 4%;
+        grid-auto-rows: min-content;
 
         .project-name {
             text-align: left;
